Fix event mobile text overlapping

--- a/src/app/components/events/events.component.css
+++ b/src/app/components/events/events.component.css
@@ -10,7 +10,7 @@
 }
 
 .shib-inu {
-  margin-left: 15px;
+  margin-left: auto;
   height: 350px;
   width: auto;
 }
